@@ -1,5 +1,5 @@
 /*
- * $Id: classes.c,v 1.184 2006/07/06 21:26:55 druzus Exp $
+ * $Id: classes.c,v 1.185 2006/07/30 18:20:56 guerra000 Exp $
  */
 
 /*
@@ -1607,13 +1607,14 @@ void hb_clsAddMsg( USHORT uiClass, char *szMessage, void * pFunc_or_BlockPointer
                   {
                      memmove( pInit, pInit + 1, (uiLen - 1) * sizeof( CLSDINIT ) );
                   }
+                  --pClass->uiDataInitiated;
                   /* without realloc, only free if uiDataInitiated is 0 */
                   // Vicente Guerra: 2006/07/30
                   //    Since pClass->pInitValues is allocated for ALL
                   //    elements in __clsnew or __incdata, it can't be
                   //    released.
                   //    Re-used messages can occurs when defining a subclass.
-                  // if( --pClass->uiDataInitiated == 0 )
+                  // if( pClass->uiDataInitiated == 0 )
                   // {
                   //    hb_xfree( pClass->pInitValues );
                   //    pClass->pInitValues = NULL;
